add / タグを生成した際のリストボックスの選択状態を再現する機能を実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -339,7 +339,14 @@
 
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Foreground="WhiteSmoke" Text="{Binding CopiedText}" />
+                        <ContentControl>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseDoubleClick">
+                                    <i:InvokeCommandAction Command="{Binding DataContext.SetImagesCommand, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding}" />
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                            <TextBlock Foreground="WhiteSmoke" Text="{Binding CopiedText}" />
+                        </ContentControl>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
