--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -101,7 +101,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="640" />
+            <ColumnDefinition Width="{Binding ImageViewWidth}" />
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
@@ -138,11 +138,23 @@
                     Foreground="Black"
                     Header="Generate draw tag (Ctrl + D)" />
             </MenuItem>
+
+            <MenuItem Foreground="WhiteSmoke" Header="View">
+                <MenuItem
+                    Command="{Binding ChangeToVgaRatio}"
+                    Foreground="Black"
+                    Header="Change To 4:3" />
+
+                <MenuItem
+                    Command="{Binding ChangeToHdRatio}"
+                    Foreground="Black"
+                    Header="Change To 16:9" />
+            </MenuItem>
         </Menu>
 
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="360" />
+                <RowDefinition Height="{Binding ImageViewHeight}" />
                 <RowDefinition Height="30" />
                 <RowDefinition Height="auto" />
                 <RowDefinition />
