fix / タグのテンプレート設定画面でタブの入力を許可

--- a/ImageChecker/Views/SettingPage.xaml
+++ b/ImageChecker/Views/SettingPage.xaml
@@ -25,7 +25,10 @@
                     Content="デフォルトに戻す" />
             </StackPanel>
 
-            <TextBox Margin="5,0" Text="{Binding ImageTagBaseText}" />
+            <TextBox
+                Margin="5,0"
+                AcceptsTab="True"
+                Text="{Binding ImageTagBaseText}" />
 
             <Border
                 Height="1"
@@ -40,7 +43,10 @@
                     Content="デフォルトに戻す" />
             </StackPanel>
 
-            <TextBox Margin="5,0" Text="{Binding DrawTagBaseText}" />
+            <TextBox
+                Margin="5,0"
+                AcceptsTab="True"
+                Text="{Binding DrawTagBaseText}" />
 
         </StackPanel>
 
