fix ui / 拡大率の表示に関する仕様変更
アプリ上では、例えば 1280 x 720 の画像を読み込んだ場合、拡大率 1/2 で全体がフィットして表示される。
今回の変更で、拡大率の表示を、フィットして表示されている状態が 1.0 と表示されるように変更した。

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -294,7 +294,7 @@
                 <DockPanel>
 
                     <TextBlock Text="Scale = " />
-                    <TextBlock Text="{Binding Scale}" />
+                    <TextBlock Text="{Binding DisplayScale}" />
 
                     <Slider
                         IsSnapToTickEnabled="true"
