--- a/ImageChecker/App.xaml
+++ b/ImageChecker/App.xaml
@@ -3,5 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://prismlibrary.com/">
-    <Application.Resources />
+    <Application.Resources>
+        <SolidColorBrush x:Key="BgDarkColorBrush" Color="#404040" />
+    </Application.Resources>
 </prism:PrismApplication>
