--- a/ImageChecker/Views/SettingPage.xaml
+++ b/ImageChecker/Views/SettingPage.xaml
@@ -8,6 +8,7 @@
     Title="SettingPage"
     Width="600"
     d:DataContext="{d:DesignInstance viewModels:SettingPageViewModel}"
+    Background="{StaticResource BgDarkColorBrush}"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -18,7 +19,7 @@
         <StackPanel Grid.Row="0">
 
             <StackPanel Margin="5" Orientation="Horizontal">
-                <TextBlock Text="Image タグの生成用" />
+                <TextBlock Foreground="WhiteSmoke" Text="Image タグの生成用" />
                 <Button
                     Margin="10,0"
                     Command="{Binding ResetImageTagBaseTextCommand}"
@@ -36,7 +37,7 @@
                 Background="Black" />
 
             <StackPanel Margin="5" Orientation="Horizontal">
-                <TextBlock Text="Draw タグの生成用" />
+                <TextBlock Foreground="WhiteSmoke" Text="Draw タグの生成用" />
                 <Button
                     Margin="10,0"
                     Command="{Binding ResetDrawTagBaseTextCommand}"
