--- a/ImageChecker/Views/SettingPage.xaml
+++ b/ImageChecker/Views/SettingPage.xaml
@@ -19,9 +19,13 @@
         <StackPanel Grid.Row="0">
 
             <StackPanel Margin="5" Orientation="Horizontal">
-                <TextBlock Foreground="WhiteSmoke" Text="Image タグの生成用" />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Foreground="WhiteSmoke"
+                    Text="Image タグの生成用" />
                 <Button
                     Margin="10,0"
+                    Padding="10,2"
                     Command="{Binding ResetImageTagBaseTextCommand}"
                     Content="デフォルトに戻す" />
             </StackPanel>
@@ -37,9 +41,13 @@
                 Background="Black" />
 
             <StackPanel Margin="5" Orientation="Horizontal">
-                <TextBlock Foreground="WhiteSmoke" Text="Draw タグの生成用" />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Foreground="WhiteSmoke"
+                    Text="Draw タグの生成用" />
                 <Button
                     Margin="10,0"
+                    Padding="10,2"
                     Command="{Binding ResetDrawTagBaseTextCommand}"
                     Content="デフォルトに戻す" />
             </StackPanel>
@@ -54,8 +62,9 @@
 
         <StackPanel Grid.Row="1">
             <Button
-                Width="50"
+                Width="60"
                 Margin="10"
+                Padding="10,2"
                 HorizontalAlignment="Right"
                 Command="{Binding ExitCommand}"
                 Content="終了" />
