add feat / 拡大率と位置を初期状態に戻すキーボードコマンドを実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -85,6 +85,11 @@
             Command="{Binding ChangeScaleCommand}"
             CommandParameter="0.05" />
 
+        <KeyBinding
+            Key="D1"
+            Command="{Binding ChangeToOriginalSizeCommand}"
+            Modifiers="Control" />
+
     </Window.InputBindings>
 
     <Window.Resources>
