fix / ImageListBoxD の表示をデフォルトで Collapsed に変更
あまり使わないため、デフォルトでは非表示。

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -596,7 +596,8 @@
             Grid.Column="4"
             ItemsSource="{Binding ImageContainerD.FilteredFiles}"
             SelectedIndex="{Binding ImageContainerD.SelectedIndex}"
-            SelectedItem="{Binding ImageContainerD.CurrentFile}">
+            SelectedItem="{Binding ImageContainerD.CurrentFile}"
+            Visibility="Collapsed">
 
             <ListBox.InputBindings>
                 <KeyBinding
